--- a/httpd.yml
+++ b/httpd.yml
@@ -15,7 +15,7 @@
         timeout: 300
 
 
-- name: "Installing httpd's server and 2048's app"
+- name: Configuring instance and installing apps
   hosts: all
   become: true
 
@@ -24,22 +24,20 @@
 
   tasks:
 
-    - name: Install httpd
-      yum:
-        name: httpd
-        state: latest
+    - name: Install docker
+      shell: "amazon-linux-extras install docker -y"
 
-    - name: Iniciate and enable httpd
+    - name: Iniciate and enable docker
       service:
-        name: httpd
+        name: docker
         enabled: true
         state: started
 
-    - name: Install 2048
-      copy:
-        src: ./public_html/
-        dest: /var/www/html/
-        owner: apache
-        group: apache
-        mode: "0644"
-        directory_mode: "0755"
+    - name: Install docker-compose
+      shell: "pip3 install docker-compose"
+
+    - name: Downloading necessary's files
+      shell: "wget https://github.com/MrSesioM/hello-2048/blob/main/docker-compose.yml"
+
+    - name: Building and deploying 2048's image app
+      shell: "docker-compose build && docker-compose run -d"
