--- a/httpd.yml
+++ b/httpd.yml
@@ -36,8 +36,16 @@
     - name: Install docker-compose
       shell: "pip3 install docker-compose"
 
-    - name: Downloading necessary's files
-      shell: "wget https://github.com/MrSesioM/hello-2048/blob/main/docker-compose.yml"
+    - name: Install 2048
+      copy:
+        src: "{{ item }}"
+        dest: /home/ec2-user
+        owner: root
+        group: root
+        mode: "0644"
+      loop:
+        - docker-compose.yml
+        - Dockerfile
 
     - name: Building and deploying 2048's image app
       shell: "docker-compose build && docker-compose run -d"
