--- a/httpd.yml
+++ b/httpd.yml
@@ -34,7 +34,7 @@
         state: started
 
     - name: Install docker-compose
-      shell: "pip3 install docker-compose"
+      shell: pip3 install docker-compose==1.8.0
 
     - name: Install 2048
       copy:
