--- a/httpd.yml
+++ b/httpd.yml
@@ -34,7 +34,7 @@
         state: started
 
     - name: Install docker-compose
-      shell: pip3 install docker-compose==1.8.0
+      shell: "curl -SL https://github.com/docker/compose/releases/download/v2.16.0/docker-compose-linux-x86_64 -o /usr/local/bin/docker-compose && chmod +x -R /usr/local/bin/docker-compose"
 
     - name: Install 2048
       copy:
@@ -45,4 +45,4 @@
         mode: "0644"
 
     - name: Building and deploying 2048's image app
-      shell: "docker-compose build && docker-compose run -d"
+      shell: "docker-compose pull && docker-compose run -d"
