--- a/httpd.yml
+++ b/httpd.yml
@@ -34,7 +34,11 @@
         state: started
 
     - name: Install docker-compose
-      shell: "curl -SL https://github.com/docker/compose/releases/download/v2.16.0/docker-compose-linux-x86_64 -o /usr/local/bin/docker-compose && chmod +x -R /usr/local/bin/docker-compose"
+      community.docker.docker_compose:
+      project_src: /home/ec2-user/app
+      pull: true
+      vars:
+        ansible_python_interpreter: /usr/bin/python3
 
     - name: Install 2048
       copy:
@@ -45,4 +49,5 @@
         mode: "0644"
 
     - name: Building and deploying 2048's image app
-      shell: "docker-compose pull && docker-compose run -d"
+      shell: "docker-compose pull"
+      shell: "docker-compose run -d"
